--- a/dubbo_c/dubbo_comsumer/pom.xml
+++ b/dubbo_c/dubbo_comsumer/pom.xml
@@ -21,6 +21,9 @@
     </properties>
 
 
+
+
+
     <dependencies>
         <dependency>
             <groupId>com.jk</groupId>
@@ -32,6 +35,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-solr</artifactId>
+        </dependency>
+
+
 
     </dependencies>
 
